# catkin_ws

./: .gitignore
bag_tools/: CMakeLists.txt  package.xml
bag_tools/scripts/: euroc_to_tum.py
object_detection/: CMakeLists.txt  package.xml
object_detection/msg/: BoundingBox.msg  ObjectDetection.msg
object_detection/scripts/: mnssd_node.py  webcam_node.py
object_detection/scripts/utils/: label_map_util.py
object_detection/src/: dummy.cpp
okvis_ros/config/: rviz.rviz
okvis_ros/launch/: bag_launch_with_static_tfs.launch  okvis_node_static_tf.launch
okvis_ros/okvis/config/: config_fpga_p2_euroc.yaml
posest_io/: CMakeLists.txt  package.xml
posest_io/src/: LCMOutputWrapper.cc  LCMOutputWrapper.h  OutputWrapper.h  ROSOutputWrapper.cc  ROSOutputWrapper.h
