<?xml version="1.0"?>
<package>
  <name>object_detection</name>
  <version>0.0.0</version>
  <description>ROS nodes to run some Tensorflow object detection algorithms.</description>
  <maintainer email="mknowles@mit.edu">Milo Knowles</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>cv2</run_depend>
  <run_depend>tensorflow</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>numpy</run_depend>
  <run_depend>cv_bridge</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
